k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprofile
  namespace: vprofile
spec:
  selector:
    app: vprofile
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
