k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  namespace: vprofile
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app01.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vprofile
            port:
              number: 8080
